deploy/k8s/base/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oms-celery
  namespace: openmakersuite
  labels:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/part-of: openmakersuite
    app.kubernetes.io/component: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openmakersuite
      app.kubernetes.io/component: celery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openmakersuite
        app.kubernetes.io/part-of: openmakersuite
        app.kubernetes.io/component: celery
    spec:
      serviceAccountName: openmakersuite
      containers:
        - name: celery
          image: "ghcr.io/openmakersuite/backend:latest"
          imagePullPolicy: IfNotPresent
          command:
            - celery
            - -A
            - config
            - worker
            - -l
            - info
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - celery -A config inspect ping -d celery@$HOSTNAME -t 10
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - name: media
              mountPath: /app/media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: oms-media
