deploy/k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oms-frontend
  namespace: openmakersuite
  labels:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/part-of: openmakersuite
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: openmakersuite
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openmakersuite
        app.kubernetes.io/part-of: openmakersuite
        app.kubernetes.io/component: frontend
    spec:
      serviceAccountName: openmakersuite
      containers:
        - name: frontend
          image: "ghcr.io/openmakersuite/frontend:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
