deploy/k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-postgresql
  namespace: openmakersuite
  labels:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/part-of: openmakersuite
    app.kubernetes.io/component: postgresql
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/component: postgresql
