deploy/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-redis
  namespace: openmakersuite
  labels:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/part-of: openmakersuite
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/name: openmakersuite
    app.kubernetes.io/component: redis
